--- a/style.css
+++ b/style.css
@@ -1,5 +1,33 @@
 body {
     color: white;
     text-align: center;
-    background-color: grey;
+    font-family: roboto, arial, sans-serif;
+    background-color: black;
+    padding: 10px;
 }
+
+
+.title, .message {
+    font-size: 30px;
+    font-family: lacquer, arial, sans-serif;
+}
+.title-message {
+    font-size: 20px;
+    font-family: lacquer, arial, sans-serif;
+}
+
+.buttons {
+    padding: 12px;
+}
+
+#rock, #scissors, #paper {
+    font-size: 20px;
+    padding: 12px;
+    margin: 8px;
+}
+
+.score, .history {
+    font-size: 2rem;
+    padding: 10px;
+}
+
